# app-update-server

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose-deploy-example.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  settings.py  version.py
app/api/: errors.py  exceptions.py  routers.py  server.py
app/core/: containers.py
app/entities/: base.py  update_file.py  update_manifest.py  user.py
app/models/: base.py  update_file.py  update_manifest.py  user.py
app/plugins/: health_check.py
app/plugins/base/: plugin.py
app/plugins/logger/: get_logger.py  logging_config.py  settings.py
app/plugins/postgres/: plugin.py  settings.py
app/routers/: auth_validation.py  update_files.py  update_manifest.py  user_route.py
app/services/: base_repository.py  base_service.py
app/services/auth/: auth_service.py
app/services/crm/: client.py
app/services/update_files/: service.py
app/services/update_manifest/: service.py
app/services/user/: user_repository.py  user_service.py
migrations/: env.py
migrations/versions/: 20250425-1903-22c958e5eaf8_initial_revision.py  20250522-1657-e79e6a04a0c1_add_update_manifest.py  20250522-1807-e300fab89c9c_add_file_info.py  20250522-1848-08ea19acb0a3_add_file_info_fields.py
tests/integration/: conftest.py
tests/integration/update_files_router/: conftest.py  test_update_files_router.py
tests/integration/update_manifest_router/: conftest.py  test_update_manifest_router.py
tests/integration/user_service/: conftest.py  dataset.py  test_user_repo.py  test_user_route.py
tests/unit/base_model/: test_base_model.py
tests/unit/user_service/: conftest.py  dataset.py  test_user_service.py
(+21 files in other folders)
