[project]
name = "app-update-service"
description = "app-update-service"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.12.5,<3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "dependency-injector",
  "loguru",
  "graypy",
  "addict",
  "python-dotenv",
  "greenlet",
  "alembic",
  "sqlalchemy",
  "async-sqlalchemy",
  "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
  "httpx",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "ruff",
]
