[project]
name = "app-update-service"
description = "app-update-service"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.12.5,<3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "dependency-injector",
  "loguru",
  "addict",
  "python-dotenv",
  "greenlet",
  "alembic",
  "sqlalchemy",
  "async-sqlalchemy",
  "python-multipart>=0.0.20",
  "packaging>=25.0",
  "httpx>=0.28.1",
  "aiofiles>=24.1.0",
]

[dependency-groups]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "types-aiofiles>=24.1.0.20250516",
]
